[package]
name = "vertd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.25"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "process",
    "fs",
    "io-util",
] }
tokio-tungstenite = "0.26.1"
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
