[package]
name = "vertd"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.95"
discord-webhook2 = "0.4.3"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.25"
mime_guess = "2.0.5"
rand = "0.9.0"
rbtag = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "process",
    "fs",
    "io-util",
] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "serde"] }
wgpu = "24.0.1"
